# c_practice_from_personal_laptop

./: notes.txt
code/: .flames.c.swp  .merge_Sort_Array.c.swp  .structures.c.swp  Makefile  alpha_check.c  arr_2d.c  arr_pointer.c  arr_sort_pointer.c  arr_stack.c  between.c  bitwise_byref_pointers.c  bitwize.c  calloc.c  condition.c  defectmachine.c  delete_array.c  digi_sum_rec.c  euclid.c  fact.c  fib.c  fibno_recursive.c  file_op.c  function.c  gcd.c  helloworld.c  id.c  input.c  insert_int_array.c  invoice.c  lcm.c  lenofstring.c  mem_point.c  mult_Arr.c  not.c  num.c  oct_hex.c  odd_point.c  pa.c  pl.c  po.c  (+24 more)
make_practice/: Makefile
make_practice/code/: hello.c
wim.tar/wim/src/: .gitignore  Makefile.am  main.c  main.h
wim.tar/wim/src/board/: board.c  board.h
wim.tar/wim/src/debug/: app_debug.h  app_debug_arch.c  app_debug_arch.h  app_debug_config.h  app_debug_opts.h
wim.tar/wim/src/device/: device.c  device.h
wim.tar/wim/src/device/cfg/: dev_cfg.c  dev_cfg.h
wim.tar/wim/src/device/watchdog/: watchdog.c  watchdog.h
wim.tar/wim/src/license/: license.c  license.h
wim.tar/wim/src/system/: system.c  system.h
wim.tar/wim/src/wim_proj/: project.c  project.h
wim.tar/wim/src/wim_proj/libweigh/: libweigh.c  libweigh.h
wim.tar/wim/src/wim_proj/libwim/: libwim.c  libwim.h
wim.tar/wim/src/wim_proj/log/: log.c  log.h
wim.tar/wim/src/wim_proj/log/console/: log_console.c  log_console.h
wim.tar/wim/src/wim_proj/log/sd/: log_sd.c  log_sd.h
wim.tar/wim/src/wim_proj/server/: server.c  server.h
wim.tar/wim/src/wim_proj/uio/: uio.c  uio.h
wim.tar/wim/src/wim_proj/uio/net/: uio_net.h
